{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 124,
  "lineage": "d4eedabf-bd9b-d811-c23e-2b27f7a9f54a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eips",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00ed2f9514086c65e",
            "association_id": "eipassoc-032a8e4c724540ba3",
            "domain": "vpc",
            "id": "eipalloc-00ed2f9514086c65e",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0405cc6840e124314",
            "private_dns": "ip-10-0-1-234.eu-central-1.compute.internal",
            "private_ip": "10.0.1.234",
            "public_dns": "ec2-3-78-88-231.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.78.88.231",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f5b84c5ce8438ce3",
            "association_id": "eipassoc-0732afc7c3eae36db",
            "domain": "vpc",
            "id": "eipalloc-0f5b84c5ce8438ce3",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-09220698593195735",
            "private_dns": "ip-10-0-2-68.eu-central-1.compute.internal",
            "private_ip": "10.0.2.68",
            "public_dns": "ec2-3-66-97-7.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.66.97.7",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c4c4bd6cf0c5fe52",
            "arn": "arn:aws:ec2:eu-central-1:174422293245:instance/i-0e8ac51fe807dd9d9",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e8ac51fe807dd9d9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "instance1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03ed57009cf7d2e88",
            "private_dns": "ip-10-0-3-169.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.169",
            "public_dns": "ec2-18-184-53-155.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.184.53.155",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0dfd4b2446b22dba7",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0a2187c495e0bfd77"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02cb9716f1ea78a2a",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a2187c495e0bfd77"
            ]
          },
          "dependencies": [
            "aws_key_pair.instance_keys",
            "aws_security_group.private_subnet_sg",
            "aws_subnet.private_subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c4c4bd6cf0c5fe52",
            "arn": "arn:aws:ec2:eu-central-1:174422293245:instance/i-0636f7db810f8281f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0636f7db810f8281f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "instance2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f965a04ef6a4c5d4",
            "private_dns": "ip-10-0-4-31.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.31",
            "public_dns": "ec2-35-158-16-27.eu-central-1.compute.amazonaws.com",
            "public_ip": "35.158.16.27",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01f016bb7c5815d6f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0eddef4d545597181"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cc804a83c62a72a2",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0eddef4d545597181"
            ]
          },
          "dependencies": [
            "aws_key_pair.instance_keys",
            "aws_security_group.private_subnet_sg",
            "aws_subnet.private_subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:174422293245:internet-gateway/igw-09116d37f2ca2c95a",
            "id": "igw-09116d37f2ca2c95a",
            "owner_id": "174422293245",
            "tags": {
              "Name": "gw"
            },
            "tags_all": {
              "Name": "gw"
            },
            "vpc_id": "vpc-024856f1bdf7f83a6"
          },
          "dependencies": [
            "aws_vpc.VPC-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "LBA_resource",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:174422293245:loadbalancer/app/example-alb/61535108a6a91d3a",
            "arn_suffix": "app/example-alb/61535108a6a91d3a",
            "desync_mitigation_mode": "defensive",
            "dns_name": "example-alb-1674264737.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:174422293245:loadbalancer/app/example-alb/61535108a6a91d3a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "example-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-08cf340ceaf6d8645"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07a0583461d2975b4"
              },
              {
                "subnet_id": "subnet-08d3e5ed389f393a2"
              }
            ],
            "subnets": [
              "subnet-07a0583461d2975b4",
              "subnet-08d3e5ed389f393a2"
            ],
            "vpc_id": "vpc-024856f1bdf7f83a6",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.instance_connect_sg",
            "aws_security_group.lba_sg",
            "aws_security_group.private_subnet_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.VPC-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb_listener_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:174422293245:listener/app/example-alb/61535108a6a91d3a/0ed9b22ba620055f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:174422293245:listener/app/example-alb/61535108a6a91d3a/0ed9b22ba620055f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:174422293245:loadbalancer/app/example-alb/61535108a6a91d3a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.LBA_resource",
            "aws_security_group.instance_connect_sg",
            "aws_security_group.lba_sg",
            "aws_security_group.private_subnet_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.VPC-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "lb_listener_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:174422293245:targetgroup/tg-nginx1/69c09b0a946e7a0d",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:174422293245:listener-rule/app/example-alb/61535108a6a91d3a/0ed9b22ba620055f/764aec600e9d027a",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/nginx1"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:174422293245:listener-rule/app/example-alb/61535108a6a91d3a/0ed9b22ba620055f/764aec600e9d027a",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-central-1:174422293245:listener/app/example-alb/61535108a6a91d3a/0ed9b22ba620055f",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.LBA_resource",
            "aws_lb_listener.lb_listener_http",
            "aws_lb_target_group.tg-nginx",
            "aws_security_group.instance_connect_sg",
            "aws_security_group.lba_sg",
            "aws_security_group.private_subnet_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.VPC-Terraform"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:174422293245:targetgroup/tg-nginx2/a403665a85723f82",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:174422293245:listener-rule/app/example-alb/61535108a6a91d3a/0ed9b22ba620055f/872cb60bf938f439",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/nginx2"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:174422293245:listener-rule/app/example-alb/61535108a6a91d3a/0ed9b22ba620055f/872cb60bf938f439",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-central-1:174422293245:listener/app/example-alb/61535108a6a91d3a/0ed9b22ba620055f",
            "priority": 2,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.LBA_resource",
            "aws_lb_listener.lb_listener_http",
            "aws_lb_target_group.tg-nginx",
            "aws_security_group.instance_connect_sg",
            "aws_security_group.lba_sg",
            "aws_security_group.private_subnet_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.VPC-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg-nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:174422293245:targetgroup/tg-nginx1/69c09b0a946e7a0d",
            "arn_suffix": "targetgroup/tg-nginx1/69c09b0a946e7a0d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 20,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:174422293245:targetgroup/tg-nginx1/69c09b0a946e7a0d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-nginx1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-024856f1bdf7f83a6"
          },
          "dependencies": [
            "aws_vpc.VPC-Terraform"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:174422293245:targetgroup/tg-nginx2/a403665a85723f82",
            "arn_suffix": "targetgroup/tg-nginx2/a403665a85723f82",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 20,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:174422293245:targetgroup/tg-nginx2/a403665a85723f82",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-nginx2",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-024856f1bdf7f83a6"
          },
          "dependencies": [
            "aws_vpc.VPC-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg_attachments",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:174422293245:targetgroup/tg-nginx1/69c09b0a946e7a0d-20230824161509358800000003",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:174422293245:targetgroup/tg-nginx1/69c09b0a946e7a0d",
            "target_id": "i-0e8ac51fe807dd9d9"
          },
          "dependencies": [
            "aws_instance.private_instances",
            "aws_key_pair.instance_keys",
            "aws_lb_target_group.tg-nginx",
            "aws_security_group.private_subnet_sg",
            "aws_subnet.private_subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:174422293245:targetgroup/tg-nginx2/a403665a85723f82-20230824161509392600000004",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:174422293245:targetgroup/tg-nginx2/a403665a85723f82",
            "target_id": "i-0636f7db810f8281f"
          },
          "dependencies": [
            "aws_instance.private_instances",
            "aws_key_pair.instance_keys",
            "aws_lb_target_group.tg-nginx",
            "aws_security_group.private_subnet_sg",
            "aws_subnet.private_subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateways",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00ed2f9514086c65e",
            "association_id": "eipassoc-032a8e4c724540ba3",
            "connectivity_type": "public",
            "id": "nat-07495c6d92d20513d",
            "network_interface_id": "eni-0405cc6840e124314",
            "private_ip": "10.0.1.234",
            "public_ip": "3.78.88.231",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08d3e5ed389f393a2",
            "tags": {
              "Name": "NAT Gateway 1"
            },
            "tags_all": {
              "Name": "NAT Gateway 1"
            }
          },
          "dependencies": [
            "aws_eip.nat_eips",
            "aws_subnet.public_subnets",
            "aws_vpc.VPC-Terraform"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f5b84c5ce8438ce3",
            "association_id": "eipassoc-0732afc7c3eae36db",
            "connectivity_type": "public",
            "id": "nat-046f4ebe795042b9e",
            "network_interface_id": "eni-09220698593195735",
            "private_ip": "10.0.2.68",
            "public_ip": "3.66.97.7",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07a0583461d2975b4",
            "tags": {
              "Name": "NAT Gateway 2"
            },
            "tags_all": {
              "Name": "NAT Gateway 2"
            }
          },
          "dependencies": [
            "aws_eip.nat_eips",
            "aws_subnet.public_subnets",
            "aws_vpc.VPC-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:174422293245:route-table/rtb-060aaa50dc3d49e90",
            "id": "rtb-060aaa50dc3d49e90",
            "owner_id": "174422293245",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09116d37f2ca2c95a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "r"
            },
            "tags_all": {
              "Name": "r"
            },
            "timeouts": null,
            "vpc_id": "vpc-024856f1bdf7f83a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.VPC-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:174422293245:route-table/rtb-0d6c8cfe4e0720330",
            "id": "rtb-0d6c8cfe4e0720330",
            "owner_id": "174422293245",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-07495c6d92d20513d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route table private nat"
            },
            "tags_all": {
              "Name": "route table private nat"
            },
            "timeouts": null,
            "vpc_id": "vpc-024856f1bdf7f83a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.nat_gateways",
            "aws_vpc.VPC-Terraform"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:174422293245:route-table/rtb-02bc351c74901f56d",
            "id": "rtb-02bc351c74901f56d",
            "owner_id": "174422293245",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-046f4ebe795042b9e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route table private nat"
            },
            "tags_all": {
              "Name": "route table private nat"
            },
            "timeouts": null,
            "vpc_id": "vpc-024856f1bdf7f83a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.nat_gateways",
            "aws_vpc.VPC-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a48a2d736daca22",
            "route_table_id": "rtb-060aaa50dc3d49e90",
            "subnet_id": "subnet-08d3e5ed389f393a2"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.r",
            "aws_subnet.public_subnets",
            "aws_vpc.VPC-Terraform"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0688ca32db5327d1e",
            "route_table_id": "rtb-060aaa50dc3d49e90",
            "subnet_id": "subnet-07a0583461d2975b4"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.r",
            "aws_subnet.public_subnets",
            "aws_vpc.VPC-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bba2a2329cebc54b",
            "route_table_id": "rtb-0d6c8cfe4e0720330",
            "subnet_id": "subnet-02cb9716f1ea78a2a"
          },
          "dependencies": [
            "aws_eip.nat_eips",
            "aws_nat_gateway.nat_gateways",
            "aws_route_table.r_nat",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.VPC-Terraform"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0028b53b69f918242",
            "route_table_id": "rtb-02bc351c74901f56d",
            "subnet_id": "subnet-0cc804a83c62a72a2"
          },
          "dependencies": [
            "aws_eip.nat_eips",
            "aws_nat_gateway.nat_gateways",
            "aws_route_table.r_nat",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.VPC-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_connect_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:174422293245:security-group/sg-08b46ed6f30b653ff",
            "description": "Security Group for Instance Connect Endpoint",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a2187c495e0bfd77",
                  "sg-0eddef4d545597181"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-08b46ed6f30b653ff",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "InstanceConnectSG-20230824075411097500000001",
            "name_prefix": "InstanceConnectSG-",
            "owner_id": "174422293245",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-024856f1bdf7f83a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lba_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:174422293245:security-group/sg-08cf340ceaf6d8645",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a2187c495e0bfd77",
                  "sg-0eddef4d545597181"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-08cf340ceaf6d8645",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20230824144435742800000001",
            "name_prefix": "terraform-",
            "owner_id": "174422293245",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-024856f1bdf7f83a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.instance_connect_sg",
            "aws_security_group.private_subnet_sg",
            "aws_vpc.VPC-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_subnet_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:174422293245:security-group/sg-0a2187c495e0bfd77",
            "description": "Security Group for Private Subnet 1",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a2187c495e0bfd77",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08b46ed6f30b653ff"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "private-sg-1",
            "name_prefix": "",
            "owner_id": "174422293245",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-024856f1bdf7f83a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.instance_connect_sg",
            "aws_vpc.VPC-Terraform"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:174422293245:security-group/sg-0eddef4d545597181",
            "description": "Security Group for Private Subnet 2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eddef4d545597181",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08b46ed6f30b653ff"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "private-sg-2",
            "name_prefix": "",
            "owner_id": "174422293245",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-024856f1bdf7f83a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.instance_connect_sg",
            "aws_vpc.VPC-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_inbound_from_lba",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-1398052893",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a2187c495e0bfd77",
            "security_group_rule_id": "sgr-0b3f00fd998d01eb0",
            "self": false,
            "source_security_group_id": "sg-08cf340ceaf6d8645",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lba_sg",
            "aws_security_group.private_subnet_sg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-1858067537",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0eddef4d545597181",
            "security_group_rule_id": "sgr-0e02d719056318696",
            "self": false,
            "source_security_group_id": "sg-08cf340ceaf6d8645",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lba_sg",
            "aws_security_group.private_subnet_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_outbound_ssh_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 22,
            "id": "sgrule-4231118965",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08b46ed6f30b653ff",
            "security_group_rule_id": "sgr-0266c80036483a95d",
            "self": false,
            "source_security_group_id": "sg-0a2187c495e0bfd77",
            "timeouts": null,
            "to_port": 22,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.instance_connect_sg",
            "aws_security_group.private_subnet_sg",
            "aws_vpc.VPC-Terraform"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 22,
            "id": "sgrule-3185337051",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08b46ed6f30b653ff",
            "security_group_rule_id": "sgr-05213be9f4c2aa4f8",
            "self": false,
            "source_security_group_id": "sg-0eddef4d545597181",
            "timeouts": null,
            "to_port": 22,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.instance_connect_sg",
            "aws_security_group.private_subnet_sg",
            "aws_vpc.VPC-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:174422293245:subnet/subnet-02cb9716f1ea78a2a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02cb9716f1ea78a2a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "174422293245",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 1"
            },
            "tags_all": {
              "Name": "Private Subnet 1"
            },
            "vpc_id": "vpc-024856f1bdf7f83a6"
          },
          "dependencies": [
            "aws_vpc.VPC-Terraform"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:174422293245:subnet/subnet-0cc804a83c62a72a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc804a83c62a72a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "174422293245",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 2"
            },
            "tags_all": {
              "Name": "Private Subnet 2"
            },
            "vpc_id": "vpc-024856f1bdf7f83a6"
          },
          "dependencies": [
            "aws_vpc.VPC-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:174422293245:subnet/subnet-08d3e5ed389f393a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d3e5ed389f393a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "174422293245",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 1"
            },
            "tags_all": {
              "Name": "Public Subnet 1"
            },
            "vpc_id": "vpc-024856f1bdf7f83a6"
          },
          "dependencies": [
            "aws_vpc.VPC-Terraform"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:174422293245:subnet/subnet-07a0583461d2975b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a0583461d2975b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "174422293245",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 2"
            },
            "tags_all": {
              "Name": "Public Subnet 2"
            },
            "vpc_id": "vpc-024856f1bdf7f83a6"
          },
          "dependencies": [
            "aws_vpc.VPC-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC-Terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:174422293245:vpc/vpc-024856f1bdf7f83a6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f02619fb7999b5e6",
            "default_route_table_id": "rtb-054f50c97288d15f8",
            "default_security_group_id": "sg-0c147b4df694b2760",
            "dhcp_options_id": "dopt-075457ae043128a19",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-024856f1bdf7f83a6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-054f50c97288d15f8",
            "owner_id": "174422293245",
            "tags": {
              "Name": "VPC-Terraform"
            },
            "tags_all": {
              "Name": "VPC-Terraform"
            }
          }
        }
      ]
    }
  ]
}